package com.sep490.ecoverse_be.enums;

public enum CampaignType {
    SCHOOL_INTERNAL,
    INTER_SCHOOL,
    PARTNERSHIP_EVENT
}
